tests/parse_print/random_perturb/enum_liberated/delete-07/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:14:
  |
3 | given E1 new tpe enum
  |              ^
Missing enum

tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:14:
  |
3 | given E1 new tpe enum
  |              ^
Missing type

tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:14:
  |
3 | given E1 new tpe enum
  |              ^
Missing ,

tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:18:
  |
3 | given E1 new tpe enum
  |                  ^
Missing type

tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:18:
  |
3 | given E1 new tpe enum
  |                  ^
Missing new
